--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- font awesome css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!-- custom css -->
-<link rel="stylesheet" href="/responsive.css">
-<link rel="stylesheet" href="/axit.css">
+<link rel="stylesheet" href="responsive.css">
+<link rel="stylesheet" href="axit.css">
     <title>Document</title>
 </head>
 <body>
@@ -287,6 +287,6 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" integrity="sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
