--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="close-nav nav-toggle"><i class="fas fa-times"></i></span>
             <span class="open-nav nav-toggle"><i class="fas fa-bars"></i></span>
             <div class="logo">
-                <img src="/img/logo.png" alt="Logo" class="navLogo">
+                <img src="img/logo.png" alt="Logo" class="navLogo">
            </div>
            <nav id="navBar">
             <a href="#">Features</a>
@@ -31,7 +31,7 @@
         <header>
             <div class="headerLayer">
                 <div class="headerLeft">
-                    <img src="/img/logo.png" alt="Logo" class="headerLogo">
+                    <img src="img/logo.png" alt="Logo" class="headerLogo">
                     <h4>MODERN AXURE TEMPLATE <span class="left-br"><br></span> FOR BEAUTIFUL PROTOTYPES</h4>
                     <span class="headerLine"></span>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, velit!olor sit<span class="left-br"><br></span> amet consectetur adipisicing elit. Suscipit consectetur similique doloremque.<span class="left-br"><br></span>Suscipit sequi consectetur? Nulla similique iure doloremque.</p>
@@ -77,11 +77,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sint pariatur repellat eum labore est, deserunt recusandae adipisci! Quia, itaque.</p>
                 <div class="tabDownloadBtn"></div>
             </div>
-            <div class="tabImg"><img src="/img/feature-1.png" alt=""></div>
+            <div class="tabImg"><img src="img/feature-1.png" alt=""></div>
         </div>
         <div class="feature-2">
             <div class="feature-2-img">
-                <img src="/img/feature-2.png" alt="">
+                <img src="img/feature-2.png" alt="">
             </div>
             <div class="feature2-txt">
                 <h3>Sub list section</h3>
@@ -119,7 +119,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem iste voluptate error consectetur delectus!</p>
             </div>
             <div class="feature-3-right">
-                <img src="/img/feature-3.png" alt="">
+                <img src="img/feature-3.png" alt="">
             </div>
         </div>
         <div class="awesome">
@@ -212,7 +212,7 @@
                     <div class="customer">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae perspiciatis obcaecati cum doloremque incidunt, natus ullam minus minima et maxime?</p>
                         <div class="customer-name">
-                            <img src="/img/avatar1.png" alt="">
+                            <img src="img/avatar1.png" alt="">
                             <div class="name-tex">
                                 <h3>Jeremy H.</h3>
                                 <p>Manager</p>
@@ -222,7 +222,7 @@
                     <div class="customer">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae perspiciatis obcaecati cum doloremque incidunt, natus ullam minus minima et maxime?</p>
                         <div class="customer-name">
-                            <img src="/img/avatar1.png" alt="">
+                            <img src="img/avatar1.png" alt="">
                             <div class="name-tex">
                                 <h3>John S.</h3>
                                 <p>Freelancer</p>
@@ -232,7 +232,7 @@
                     <div class="customer">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae perspiciatis obcaecati cum doloremque incidunt, natus ullam minus minima et maxime?</p>
                         <div class="customer-name">
-                            <img src="/img/avatar1.png" alt="">
+                            <img src="img/avatar1.png" alt="">
                             <div class="name-tex">
                                 <h3>Susan W.</h3>
                                 <p>Photographer</p>
